--- a/Css/style.css
+++ b/Css/style.css
@@ -120,8 +120,9 @@ ul i{
     text-align: center;
 }
 .det-button{
-    position: absolute;
+    position: relative;
     left: calc(50% - 5rem);
+    margin-bottom: 4rem;
 }
 .about button{
     margin: 0 auto;
@@ -177,6 +178,29 @@ ul i{
     margin-top: 1rem;
 }
 .services .descText{
-    margin: 2rem 20rem;
+    margin: 4rem 20rem;
     padding: 0  4rem;
+}
+.more-info{
+    height: 40rem;
+    background:rgba(0, 0, 0, 0.8) url("/assets/street1.jpg") ;
+    background-size: 100% 40rem ;
+    opacity: 0.5;
+    color: aliceblue;
+    background-blend-mode:darken ;
+}
+.more-info h2{
+    color: aliceblue;
+    padding-top: 11rem;
+}
+.more-info p{
+    text-align: center;
+    padding: 3.5rem 30rem ;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+}
+.more-info button{
+    color:aliceblue;
+    margin: 1.5rem 0;
+    border-color: aliceblue;
 }
