--- a/Css/style.css
+++ b/Css/style.css
@@ -7,13 +7,13 @@
 .header{
     display: flex;
     justify-content: center;
-    height: 34rem;
+    height: 30rem;
 }
 .imgIntro img{
     border-radius: 50%;
-    height: 22rem;
-    width: 22rem;
-    margin-top:6rem;
+    height: 20rem;
+    width: 20rem;
+    margin-top: 5rem;
     margin-right: 4rem;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -26,19 +26,18 @@
     justify-content: flex-end;
 }
 .prgIntro{
-    margin-top:6rem;
-    margin-left:1rem;
+    margin-top:4rem;
     width: 50%;
 }
 .prgIntro h1{
-    font-size: 3em;
+    font-size: 2.6em;
     font-family: 'Montserrat', sans-serif;
     padding: 1.5rem 0 ;
     color: rgb(98, 96, 96);
 }
 .prgIntro p{
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-right: 15rem;
     padding-right: 3rem;
     padding-bottom: 2rem;
@@ -59,18 +58,18 @@ button{
     -o-border-radius: 10rem;
 }
 .about{
-    height: 44rem;
+    /* height: 40rem; */
     background-color: rgb(235, 235, 235);
 }
 .first-line{
     position: relative;
-    top: 4.5rem;
+    top: 4rem;
     border-color: rgb(120, 120, 120);
 }
 .description{
     text-align: center;
-    font-size: 1.5rem;
-    padding: 2rem 42rem;
+    font-size: 1.2rem;
+    padding: 2rem 29rem;
     color: rgb(120, 120, 120) ;
 }
 hr{
@@ -79,15 +78,16 @@ hr{
 }
 h2{
     text-align: center;
-    padding-top: 6rem;
-    font: 2.5rem 'Montserrat', sans-serif;
+    padding-top: 5.5rem;
+    font: 2rem 'Montserrat', sans-serif;
     color: rgb(101, 101, 101);
 }
 .linethroue{
-    width: 45.6rem;
+    /* font-size: 1.2rem; */
+    width: 36rem;
     position: absolute;
     z-index: 0;
-    margin: 5.2rem 0 0 36.7rem;
+    margin: 4.2rem 0 0 27.5rem;
     border-color: rgb(120, 120, 120);
 }
 ul{
@@ -97,16 +97,16 @@ ul{
     list-style: none;
     position: relative;
     z-index:1;
-    margin-top: 2rem;
+    margin-top: 1.7rem;
 }
 ul i{
     padding-left: 0;
     color: rgb(101, 101, 101);
-    font-size: 2rem;
+    font-size: 1.6rem;
     border:0.1rem solid rgb(120, 120, 120);
     padding: 1.6rem;
     border-radius: 50%;
-    margin:0 3rem;
+    margin:0 2rem;
     background-color: rgb(235, 235, 235) ;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -114,8 +114,8 @@ ul i{
     -o-border-radius: 50%;
 }
 .descText{
-    font-size: 1.5rem;
-    padding: 3rem 30rem;
+    font-size: 1.2rem;
+    padding: 3rem 15rem;
     color: rgb(120, 120, 120) ;
     text-align: center;
 }
@@ -126,12 +126,16 @@ ul i{
 }
 .about button{
     margin: 0 auto;
+    margin-bottom: 2rem;
 }
 .row-revers{
     display: flex;
     flex-direction: row-reverse;
     width: 75rem;
-    margin: 3.5rem auto;
+    margin: 3rem auto;
+}
+.services .row-revers .text{
+    padding-left: 2rem;
 }
 .row{
     display: flex;
@@ -139,19 +143,30 @@ ul i{
     width: 75rem;
     margin: auto;
 }
+.row div,.row-revers div{
+    width: 50%;
+}
 .services img{
-    height: 27rem;
-    width: 36rem;
+    height: 24rem;
+    width: 33rem;
+    display: block;
+    margin: 0 auto;
+    object-fit: cover;
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
 }
+.services>hr{
+    position: relative;
+    top: 3rem;
+}
 .services p{
     line-height: 2rem;
-    font-size: 1.5rem; 
+    font-size: 1.3rem; 
     color: rgb(120, 120, 120);
+    text-align:justify;
 }
 .services h3{
     padding: 1rem 0;
@@ -182,26 +197,30 @@ ul i{
     padding: 0  4rem;
 }
 .more-info{
-    height: 40rem;
+    height: 35rem;
     background:rgba(0, 0, 0, 0.8) url("/assets/street1.jpg") ;
     background-size: 100% 40rem ;
     opacity: 0.5;
     color: aliceblue;
     background-blend-mode:darken ;
 }
+.more-info hr{
+    position: relative;
+    top: 3.5rem;
+}
 .more-info h2{
     color: aliceblue;
-    padding-top: 11rem;
+    padding-top: 8rem;
 }
 .more-info p{
     text-align: center;
-    padding: 3.5rem 30rem ;
+    padding: 3rem 29rem ;
     font-size: 1.4rem;
     line-height: 2.5rem;
 }
 .more-info button{
     color:aliceblue;
-    margin: 1.5rem 0;
+    margin: 1rem 0;
     border-color: aliceblue;
 }
 footer{
@@ -217,20 +236,14 @@ footer i{
     margin: 1rem 0.5rem;
 }
 footer .row{
-    padding-top: 3rem;
-    width: 90rem;
+    padding-top: 1.5rem;
+    width: 85rem;
 }
 footer h3{
     padding-top: 3rem ;
     padding-bottom: 1.5rem;
     font: 2rem 'Montserrat', sans-serif ;
     color: rgb(92, 90, 90);
-}
-.row p{
-    font: 1.3rem 'Montserrat', sans-serif ;
-    line-height: 2rem;
-    color:rgb(120, 120, 120) ;
-    text-align:justify;
 }
 .ref{
     width: 45rem;
@@ -246,6 +259,7 @@ footer form{
     padding:4rem 3rem;
 }
 footer input{
+    outline: none;
     font: 1rem 'Montserrat', sans-serif ;
     padding: 1rem;
     margin: 1rem;
@@ -263,6 +277,7 @@ footer textarea{
     margin: 1rem;
     width: 32rem;
     height: 12rem;
+    outline: none;
     border-color: rgb(179, 178, 178);
     border-radius: 0.7rem;
 }
@@ -271,12 +286,11 @@ footer textarea{
     margin: 1rem ;
 }
 footer hr{
-    margin: 2rem auto;
+    margin: 1.5rem auto;
 }
 footer p{
     color: rgb(183, 183, 183);
     text-align: center;
     font-size: 1rem;
-    padding-bottom:4.5rem;
-
+    padding-bottom:2rem;
 }
